# n-body_sim

./: .gitignore  Cargo.toml  rust-toolchain.toml
gl/: build.rs
shaders/: obj_frag.glsl  obj_geom.glsl  obj_vertex.glsl  simple_color_frag.glsl  text_frag.glsl  text_vertex.glsl  traj_vertex.glsl
src/: draw.rs  gl_data.rs  lib.rs  main.rs  update.rs
src/draw/: gui.rs  text.rs
src/gl_data/: mod.rs
src/gui/: label.rs  mod.rs  root.rs
src/handle_input/: create.rs  mod.rs  select.rs  view.rs
src/init/: draw.rs  gui.rs  mod.rs  shader.rs  text.rs  world.rs
src/sim/: mod.rs  parallel.rs  predict.rs
src/state_and_cfg/: gl_data.rs  mod.rs  prediction.rs  state.rs
src/support/: id_table.rs  mod.rs
src/tests/: mod.rs
