[package]
name = "n-body_sim"
version = "0.1.1"
edition = "2018"
build = "gl/build.rs"
default-run = "n-body_sim"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
gl_generator = "0.14.0"

[dependencies]
#freetype-rs = {version = "0.38.0", features = ["bundled"]}
#freetype-rs = "0.36.0"
rusttype = "0.9.3"
ttf-parser = "0.25.1"

[dependencies.glfw]
#git = "https://github.com/bjz/glfw-rs.git"
version = "0.45.0"
default-features = false

[dependencies.mat_vec]
git = "https://github.com/koatliaxl/mat_vec.git"
branch = "release"

[profile.dev]
#incremental = false