[package]
name = "n-body_sim"
version = "0.1.4"
edition = "2018"
build = "gl/build.rs"
default-run = "n-body_sim"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
gl_generator = "0.14.0"

[dependencies]
fontdue = "0.9.3"

[dependencies.glfw]
#git = "https://github.com/bjz/glfw-rs.git"
version = "0.45.0"
default-features = false

[dependencies.mat_vec]
git = "https://github.com/koatliaxl/mat_vec.git"
branch = "release"

[profile.dev]
#incremental = false